--- a/index.html
+++ b/index.html
@@ -1,24 +1,23 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="./css/style.css">
 </head>
 <body>
     <div class="containerr">
         <div class="header">
-            <div class="nav-item">Home page</div>
-            <div class="nav-item">Settings</div>
-            <div class="nav-item">Titles</div>
-            <div class="nav-item">Main menu</div>
+            <div class="nav-item">Home </div>
+            <div class="nav-item">Landing</div>
+            <div class="nav-item">About</div>
+            <div class="nav-item">Team</div>
             <div class="nav-item">Gallery</div>
-            <div class="nav-item">About us</div>
-            <div class="nav-item">More</div>
+            <div class="nav-item">Contact</div>
         </div>
         <div class="image">
             <div class="image-container">
-                <img src="C:\Users\Artur\OneDrive\Робочий стіл\html css prakt\pract 4a\img\History.jpeg" alt="Your history">
+                <img src="./img/la.jpeg" alt="Your history">
             </div>
-            <div class="text1">Your history</div>
+            <div class="text1">Latest projects</div>
             <div class="text">Sample text. Click to select the Text Element <br> Image from Freepick</div>
             <div class="email-input">
                 <input type="email" placeholder="Enter email address">
@@ -28,44 +27,44 @@
         <div class="cities">
             <div class="container">
                 <div class="column">
-                    <img class="round-image" src="C:\Users\Artur\OneDrive\Робочий стіл\html css prakt\pract 4a\img\Kyiv.webp">
-                    <p>Kiev</p>
-                    <p>170 Dollars</p>
-                </div>
-                <div class="column">
-                    <img class="round-image" src="C:\Users\Artur\OneDrive\Робочий стіл\html css prakt\pract 4a\img\paris.jpeg">
+                    <img class="round-image" src="./img/paris.jpeg">
                     <p>Paris</p>
-                    <p>250 Dollars</p>
+                    <p>10 property</p>
                 </div>
                 <div class="column">
-                    <img class="round-image" src="C:\Users\Artur\OneDrive\Робочий стіл\html css prakt\pract 4a\img\la (1).jpeg">
+                    <img class="round-image" src="./img/pexels-photo-325185.jpeg">
+                    <p>New York</p>
+                    <p>40 property</p>
+                </div>
+                <div class="column">
+                    <img class="round-image" src="./img/la.jpeg">
                     <p>Los Angeles</p>
-                    <p>215 Dollars</p>
+                    <p>34 property</p>
                 </div>
                 <div class="column">
-                    <img class="round-image" src="C:\Users\Artur\OneDrive\Робочий стіл\html css prakt\pract 4a\img\Chicago.jpg">
+                    <img class="round-image" src="./img/pexels-photo-1029615.jpeg">
                     <p>Chicago</p>
-                    <p>270 Dollars</p>
+                    <p>20 property</p>
                 </div>
                 <div class="column">
-                    <img class="round-image" src="C:\Users\Artur\OneDrive\Робочий стіл\html css prakt\pract 4a\img\Warsaw.jpg">
-                    <p>Warsaw</p>
-                    <p>210 Dollars</p>
+                    <img class="round-image" src="./img/pexels-photo-2090651.jpeg">
+                    <p>Verona</p>
+                    <p>60 property</p>
                 </div>
                 <div class="column">
-                    <img class="round-image" src="C:\Users\Artur\OneDrive\Робочий стіл\html css prakt\pract 4a\img\Miskolc.jpg">
-                    <p>Miskolc</p>
-                    <p>90 Dollars</p>
+                    <img class="round-image" src="./img/pexels-photo-1769369 (1).jpeg">
+                    <p>Tokio</p>
+                    <p>56 property</p>
                 </div>
             </div>
         </div>
         <div class="main">
             <div class="main-text">
-                <div class="item1">Kyiv</div>
+                <div class="item1">New York</div>
                 <div class="item2">Sample text. Click to select the Text Element. Image from Freepick.</div>
             </div>
             <div class="new">
-                <img src="C:\Users\Artur\OneDrive\Робочий стіл\html css prakt\pract 4a\img\Kyiv 2.jpg" width="1350px" height="650px">
+                <img src="./img/pexels-photo-325185.jpeg" width="1350px" height="650px">
             </div>
         </div>
         <div class="seca">
@@ -81,35 +80,35 @@
             </div>
         </div>
         <div class="ro">
-            <img class="photo" src="C:\Users\Artur\OneDrive\Робочий стіл\html css prakt\pract 4a\img\pexels-photo-1769369 (1).jpeg">
+            <img class="photo" src="./img/key.jpg">
             <div class="text-container">
                 <div class="chat">
-                    Looking for adventures <br> Best deals
+                    Trusted by best exclusive agents <br> 
                 </div>
                 <div class="chat2">
                     Sample text. Click to select the Text Element.
                     <ul>
-                        <li>settlement assistance</li>
-                        <li>medicaid</li>
-                        <li>personal bodyguard</li>
+                        <li>Find excelent deals</li>
+                        <li>Friendly host & Fast support</li>
+                        <li>List your own property</li>
                     </ul>
                 </div>
             </div>
         </div>
         <div class="mn-text">
-            <div class="item3">Better appartments</div>
+            <div class="item3">Exclusive appartments</div>
             <div class="item4">Sample text. Click to select the Text Element. Image from Freepick.</div>
         </div>
         <div class="new">
-            <img src="C:\Users\Artur\OneDrive\Робочий стіл\html css prakt\pract 4a\img\pexels-photo-2090651.jpeg" width="1350px" height="650px">
+            <img src="./img/white.jpg" width="1350px" height="650px">
         </div>
         <div class="end">
             <div class="last">
-                <h3>Your excursions</h3>
+                <h3>Get Your Dream House</h3>
                 <h2>Sample text click to select the Text Element</h2>
                 <div class="buttons">
-                   Payment method <input type="text" placeholder="Write down your card number">
-                    Date <input type="email" placeholder="Date of travel">
+                   Name <input type="text" placeholder="Enter your name">
+                    Email <input type="email" placeholder="Enter a valid email adress">
                     <button class="submit-button">Submit</button>
                 </div>
             </div>
@@ -117,3 +116,4 @@
     </div>
 </body>
 </html>
+
